# sfmlCodingProject

./: CMakeLists.txt  main.cpp
headers/: Constants.h  Logger.cpp  Logger.h  Options.cpp  Options.h
resources/buttons/: play.aseprite
src/: main.cpp
src/classes/: AnimatedObject.cpp  AnimatedObject.h  Button.cpp  Button.h  Clickable.h  Dice.cpp  Dice.h  GameManager.cpp  GameManager.h  Label.cpp  Label.h  Level.cpp  Level.h  Logger.cpp  Logger.h  Object.cpp  Object.h  Options.cpp  Options.h  PlayerData.cpp  PlayerData.h  TexturedObject.cpp  TexturedObject.h
src/headers/: Constants.h
src/objects/: Button.cpp  Button.h  Clickable.h  Logger.cpp  Logger.h  Options.cpp  Options.h
src/resources/bg/: background_debug_16xScale.aseprite
src/resources/buttons/: play_2.aseprite
src/resources/objects/: dice_sheet.aseprite
